<?xml version="1.0" encoding="utf-8"?>
<!--
	~ (C) 2020-2023 Hunter J Drum
	~ (C) 2024 MDP43140
  -->
<resources>
	<string name="app_name">LTE Cleaner</string>
	<string name="delete_empty_folders">Delete empty folders</string>
	<string name="aggressive_filter">Enable aggressive filter</string>
	<string name="whitelist">Whitelist</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="add_to_whitelist">Add to whitelist</string>
	<string name="cancel">Cancel</string>
	<string name="clean">Clean</string>
	<string name="analyze">Analyze</string>
	<string name="enable_generic_filter">Enable generic filter</string>
	<string name="one_click_clean">One click clean</string>
	<string name="freed">Freed: </string>
	<string name="found">Found: </string>
	<string name="auto_whitelist">Auto Whitelist</string>
	<string name="reset_whitelist">Empty whitelist?</string>
	<string name="are_you_reset_whitelist">Are you sure you want to clear the whitelist?</string>
	<string name="reset">Clear</string>
	<string name="delete_apk_files">Delete .apk files</string>
	<string name="status_idle">Status: Idle</string>
	<string name="progress_0">0%</string>
	<string name="status_running">Status: Running</string>
	<string name="privacy_sum">View the privacy policy (external link)</string>
	<string name="generic_sum">.tmp, .log, Logs, logs</string>
	<string name="aggressive_sum">Too much to list here</string>
	<string name="apk_sum">Installer files for android</string>
	<string name="oneclick_sum">No confirmation dialog when clean button is pressed</string>
	<string name="autowhite_sum">Detect folders that should be protected automatically</string>
	<string name="prompt_string">Please add file access permissions</string>
	<string name="settings_string">Settings</string>
	<string name="title_activity_prompt">PromptActivity</string>
	<string name="corpse_summary">Files left over from uninstalled apps</string>
	<string name="corpse_title">Delete corpse files</string>
	<string name="other">Other</string>
	<string name="clean_boot_title">Clean on boot</string>
	<string name="clean_boot_sum">Automatically runs when device completed boot, without having to open the app.</string>
	<string name="clean_hourly_title">Hourly Clean</string>
	<string name="clean_hourly_sum">How many hour cleanup should be scheduled.</string>
	<string name="data_import_title">Import Data</string>
	<string name="data_export_title">Export Data</string>
	<string name="data_import_sum">Restore settings from backup file</string>
	<string name="data_export_sum">Backup settings to XML/JSON file</string>
	<string name="stopbgapps_title">Stop background apps</string>
	<string name="stopbgapps_sum">Closes apps that are running in the background</string>
	<string name="permission_needed">Permission needed!</string>
	<string name="failed_scan">Scan failed.</string>
	<string name="are_you_sure_deletion">Are you sure? Files deleted cannot be restored</string>
	<string name="are_you_sure_deletion_title">Confirm Deletion</string>
	<string name="aggressive_filter_what_title">What aggressive filter does</string>
	<string name="adds_the_following">Adds the following filters:</string>
	<string name="samsung_not_work">Doesn\'t work on samsung devices</string>
	<string name="clear_clipboard">Clear clipboard</string>
	<string name="double_check_sum">How many times the scan reruns each time something is found</string>
	<string name="double_check_title">Double Checker</string>
	<string name="notification_title">LTE Clean Worker Finished</string>
	<string name="clean_notification">Cleaned:</string>
	<string name="empty_whitelist">Nothing in whitelist</string>
	<string name="theme_sum">Will otherwise follow system settings. Restart app to take effect</string>
	<string name="theme_title">Select Theme</string>
	<string name="filters_category_title">Filters</string>
	<string name="scanner_category_title">Scanner</string>
	<string name="links_category_title">Links</string>
	<string name="settings_page_title">Settings</string>
	<string name="remove_from_whitelist">Remove from whitelist?</string>
	<string name="delete">Delete</string>
	<string name="clipboard_clear_failed">Failed to clear clipboard</string>
	<string name="settings_notification_name">Daily Cleaner Notification</string>
	<string name="settings_notification_sum">Shows notification of how much cache was cleaned daily</string>
	<string-array name="themes">
		<item>Follow system</item>
		<item>Light</item>
		<item>Dark</item>
	</string-array>

	<string-array name="generic_filter_files" translatable="false">
		<item>.tmp</item>
		<item>.log</item>
	</string-array>
	<string-array name="generic_filter_folders" translatable="false">
		<item>Logs</item>
		<item>logs</item>
		<item>temp</item>
		<item>Temporary</item>
		<item>temporary</item>
	</string-array>

	<!-- TODO: Remove or change this placeholder text -->
	<string-array name="aggressive_filter_folders" translatable="false">
		<item>supersonicads</item>
		<item>Cache</item>
		<item>Analytics</item>
		<item>.thumbnails?</item>
		<item>mobvista</item>
		<item>UnityAdsVideoCache</item>
		<item>albumthumbs?</item>
		<item>LOST.DIR</item>
		<item>.Trash</item>
		<item>desktop.ini</item>
		<item>leakcanary</item>
		<item>.DS_Store</item>
		<item>.spotlight-V100</item>
		<item>fseventsd</item>
		<item>Bugreport</item>
		<item>bugreports</item>
		<item>.Trash</item>
		<item>cache</item>
		<item>splashad</item>
	</string-array>
	<string-array name="aggressive_filter_files" translatable="false">
		<item>.exo</item>
		<item>thumbs?.db</item>
		<item>.thumb[0-9]</item>
		<item>splashad</item>
	</string-array>
	<string-array name="autowhitelist_filter" translatable="false">
		<item>backup</item>
		<item>copy</item>
		<item>copies</item>
		<item>important</item>
		<item>do_not_edit</item>
	</string-array>
</resources>